--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,41 +1,81 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      Tab One
-    </ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>Registrar caballo</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-    <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
-      <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
-      </ion-card-content>
-    </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+    <form [formGroup]="validations_formHorse" (ngSubmit)="onSubmit(validations_formHorse.value)" >
+
+      <ion-item>
+        <ion-label position="stacked">Nombre</ion-label>
+        <ion-input formControlName="nameFormControl"></ion-input>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.nameFormControl">
+          <div class="error-message"
+            *ngIf="validations_formHorse.get('nameFormControl').hasError(validation.type) &&
+             (validations_formHorse.get('nameFormControl').dirty || 
+             validations_formHorse.get('nameFormControl').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div> <!-- End formControlName="username" -->
+
+      
+    <ion-item>
+      <ion-label position="stacked" #razaFormControl>Raza</ion-label>
+      <ion-input formControlName="razaFormControl"></ion-input>
+    </ion-item>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validation_messages.razaFormControl">
+        <div class="error-message" *ngIf="validations_formHorse.get('razaFormControl').hasError(validation.type) &&
+          (validations_formHorse.get('razaFormControl').dirty || 
+          validations_formHorse.get('razaFormControl').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+
+    
+      <ion-item>
+        <ion-label position="stacked" #edad>Edad</ion-label>
+        <ion-input formControlName="edadFormControl"></ion-input>
+      </ion-item>      
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.edadFormControl">
+          <div class="error-message"
+            *ngIf="validations_formHorse.get('edadFormControl').hasError(validation.type) &&
+             (validations_formHorse.get('edadFormControl').dirty || 
+             validations_formHorse.get('edadFormControl').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div> <!-- End formControlName="edadFormControl" -->
+
+      <ion-item>
+        <ion-label position="stacked" #puntuacionExposicion>Puntuación obtenida</ion-label>
+        <ion-input formControlName="puntuacionExposicionFormControl"></ion-input>
       </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
+      <div class="validation-errors">
+        <ng-container *ngFor="let validation of validation_messages.puntuacionExposicionFormControl">
+          <div class="error-message"
+            *ngIf="validations_formHorse.get('puntuacionExposicionFormControl').hasError(validation.type) &&
+             (validations_formHorse.get('puntuacionExposicionFormControl').dirty || 
+             validations_formHorse.get('puntuacionExposicionFormControl').touched)">
+            <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+          </div>
+        </ng-container>
+      </div> <!-- End formControlName="puntuacionExposicionFormControl" -->
+
+      <ion-button color="primary" class="submit-btn" expand="full" type="submit" [disabled]="!validations_formHorse.valid">
+        Registrar</ion-button>
+
+<!--
+      <ion-item>
+        <ion-label position="stacked">Fotografia</ion-label>
+
+      </ion-item> -->
+
+      </form><!-- End validations_formHorse -->
 </ion-content>
