--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -2,3 +2,19 @@
   max-height: 35vh;
   overflow: hidden;
 }
+.error-message
+{
+  color: red;
+  font-size: 14px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.submit-btn {
+  margin-top: 40px;
+}
+
+ion-item ion-label
+{
+  color: rgb(59, 66, 66);
+}
