--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,20 +1,26 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="registrarCaballo">
       <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
+      <ion-label>Registrar caballo</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="visualizarCaballo">
       <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+      <ion-label>Visualizar caballo</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="consultarLista">
       <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
+      <ion-label>Consultar lista</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
+  
 
+    <ion-tab-button tab="resultadoCompetencia">
+      <ion-icon name="compass"></ion-icon>
+      <ion-label>Resultados competencia</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
 </ion-tabs>
